添加并发包翻译