@@ -38,7 +38,7 @@
             <version>1.36</version>
             <scope>provided</scope>
         </dependency>
-    </dependencies>
+    </dependencies><build><plugins><plugin><groupId>org.apache.maven.plugins</groupId><artifactId>maven-compiler-plugin</artifactId><configuration><source>8</source><target>8</target><compilerArgs>--enable-preview</compilerArgs></configuration></plugin></plugins></build>
     <dependencyManagement>
         <dependencies>
             <dependency>
